--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,26 @@
   <artifactId>im</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <properties>
+    <netty.version>4.1.6.Final</netty.version>
+    <fastjson.version>1.2.29</fastjson.version>
+    <junit.version>4.12</junit.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
-      <version>4.1.6.Final</version>
+      <version>${netty.version}</version>
     </dependency>
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
-      <version>1.2.31</version>
+      <version>${fastjson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
     </dependency>
   </dependencies>
 </project>
