--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <netty.version>4.1.6.Final</netty.version>
+    <netty.version>4.1.42.Final</netty.version>
     <fastjson.version>1.2.29</fastjson.version>
     <junit.version>4.12</junit.version>
+    <lombok.verseion>1.18.10</lombok.verseion>
   </properties>
 
   <dependencies>
@@ -29,6 +30,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>${lombok.verseion}</version>
     </dependency>
   </dependencies>
 </project>
