--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,12 @@
             <version>5.3.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-web</artifactId>
+            <version>3.9.0</version>
+        </dependency>
+
+
     </dependencies>
 </project>
